Fixes form element covering site-title link

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -81,6 +81,8 @@
 		margin: 0 120px 0 0;
 		padding: 0 5px 0 15px;
 		display: table;
+		position: relative;
+		z-index: 1000;
 		
 		h1 {
 			font-family: quadon, Georgia, serif;
